# cpuminer-scash

./: .gitignore  .gitmodules  Makefile.am  NEWS  README  README.md  build-linux-static.dockerfile  build-linux-static.sh  configure.ac  cpu-miner.c  example-cfg.json  github-release-notes-template.md  miner.h  randomx-miner.c  util.c
.github/workflows/: build-linux-static-arm64.yml  build-linux-static-x64.yml  build-macos-14-arm64.yml  build-windows-ucrt-x64.yml  ci.yml
hiveon/: h-config.sh  h-manifest-template.conf  h-run.sh  h-stats.sh
